# macdoc-drug-discovery

./: .env.example  .gitignore  README.md  config.yaml  molecule.py  prepare.py  program.md  pyproject.toml  run.py
